--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.5.0",
     "nodemon": "^2.0.19",
+    "path": "^0.12.7",
     "socket.io": "^4.5.1"
   }
 }
